--- a/BPMMobile/Content/ApprovalUtils.css
+++ b/BPMMobile/Content/ApprovalUtils.css
@@ -23,7 +23,10 @@
     color: white;
     background-color: #FD8A21;
 }
-
+.itemtitle3 {
+    color: white;
+    background-color: #51FFFF;
+}
 #signbody {
     display: none;
 }
